# tower

./: Cargo.toml  MEMORY.md  Plan.md  icon.svg.import  project.godot  rust-toolchain.toml
.cargo/: config.toml
.zed/: debug.json
autoload/: game_events.gd  game_events.gd.uid
code/: enemy.gd  world.gd
code/towers/: arrow.gd  basic_tower.gd
docs/: damage.md
models/: crossbow_shaft.obj.import
models/KayKit Brand Resouces/: KayKit_logo.png.import  KayKit_logoVariation_black.png.import  KayKit_logoVariation_red.png.import  KayKit_logoVariation_white.png.import  KayKit_logo_black.png.import  KayKit_logo_red.png.import  KayKit_logo_white.png.import
resources/tiles/: curve_road.tres  demon_lord.tres  straight.tres  t_junction.tres
resources/towers/: archer_data.tres
scenes/: main.tscn  world.tscn
scenes/demons/: demon.tscn
scenes/game_board/: game_board.tscn
scenes/mobs/: minon.tscn  skeleton_minion.tscn
scenes/projectiles/: arrow.tscn
scenes/tiles/: bridge.tscn  dirt.tscn  forest_road_start.tscn  forest_road_straight.tscn  forest_road_tee.tscn  forest_road_turn.tscn  grass.tscn  grass_corner_sharp.tscn  grass_corner_wide.tscn  grass_end.tscn  grass_start.tscn  grass_straight.tscn  road_tile.tscn  tower.tscn  water.tscn
scenes/towers/: archer_tower.tscn  arrow.tscn  basic_tower.tscn  castle.tscn  world0.tscn
scripts/core/: game_manager.gd  game_manager.gd.uid  wave_manager.gd  wave_manager.gd.uid
scripts/demons/: demon.gd  demon.gd.uid  path_finder.gd  path_finder.gd.uid
scripts/draft/: draft_manager.gd  (+3 more)
src/: lib.rs  loading.rs  main.rs
(+463 files in other folders)
